support listing regions
